--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,5 +28,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          Install-Module -Name AWS.Tools.Route53 -RequiredVersion 4.1.334
+          Install-Module -Name AWS.Tools.Route53 -RequiredVersion 4.1.334 -Repository PSGallery -Force -Confirm:$true
         shell: pwsh
